Ui: fix styles order for Pillar and add Gap bottom property for Beam

--- a/Layout/Beam/styles.module.scss
+++ b/Layout/Beam/styles.module.scss
@@ -23,5 +23,9 @@
     &.whole {
       height: 100%;
     }
+
+    .bottom-gap {
+      margin-bottom: $beamGap;
+    }
   }
 }
