--- a/Layout/Pillar/styles.module.scss
+++ b/Layout/Pillar/styles.module.scss
@@ -11,69 +11,78 @@
   }
 
   @for $i from 1 through 12 {
-
     // Extra small devices (portrait phones, less than 576px)
     @media (max-width: 575.98px) {
       &.pillar-xs-#{$i} {
-        width: calc(100%* $i / $columnCount - ($columnCount - $i)*($columnPadding / $columnCount));
+        width: calc(
+          100% * $i / $columnCount - ($columnCount - $i) *
+            ($columnPadding / $columnCount)
+        );
       }
 
       &.pillar-xs-offset-#{$i} {
-        margin-left: calc(100%* $i / $columnCount - ($columnCount - $i)*($columnPadding / $columnCount));
+        margin-left: calc(
+          100% * $i / $columnCount - ($columnCount - $i) *
+            ($columnPadding / $columnCount)
+        );
       }
     }
+  }
 
+  @for $i from 1 through 12 {
     // Small devices (landscape phones, 576px and up)
     @media (min-width: 576px) {
-
       &.pillar-sm-#{$i} {
-        width: calc(100%* $i / $columnCount - ($columnCount - $i)*($columnPadding / $columnCount));
+        width: calc(
+          100% * $i / $columnCount - ($columnCount - $i) *
+            ($columnPadding / $columnCount)
+        );
       }
 
       &.pillar-sm-offset-#{$i} {
-        margin-left: calc(100%* $i / $columnCount - ($columnCount - $i)*($columnPadding / $columnCount));
+        margin-left: calc(
+          100% * $i / $columnCount - ($columnCount - $i) *
+            ($columnPadding / $columnCount)
+        );
       }
     }
+  }
 
+  @for $i from 1 through 12 {
     // Medium devices (tablets, 768px and up)
     @media (min-width: 768px) {
-
       &.pillar-md-#{$i} {
-        width: calc(100%* $i / $columnCount - ($columnCount - $i)*($columnPadding / $columnCount));
+        width: calc(
+          100% * $i / $columnCount - ($columnCount - $i) *
+            ($columnPadding / $columnCount)
+        );
       }
 
       &.pillar-md-offset-#{$i} {
-        margin-left: calc(100%* $i / $columnCount - ($columnCount - $i)*($columnPadding / $columnCount));
+        margin-left: calc(
+          100% * $i / $columnCount - ($columnCount - $i) *
+            ($columnPadding / $columnCount)
+        );
       }
     }
+  }
 
+  @for $i from 1 through 12 {
     // Large devices (desktops, 992px and up)
     @media (min-width: 992px) {
-
       &.pillar-lg-#{$i} {
-        width: calc(100%* $i / $columnCount - ($columnCount - $i)*($columnPadding / $columnCount));
+        width: calc(
+          100% * $i / $columnCount - ($columnCount - $i) *
+            ($columnPadding / $columnCount)
+        );
       }
 
       &.pillar-lg-offset-#{$i} {
-        margin-left: calc(100%* $i / $columnCount - ($columnCount - $i)*($columnPadding / $columnCount));
+        margin-left: calc(
+          100% * $i / $columnCount - ($columnCount - $i) *
+            ($columnPadding / $columnCount)
+        );
       }
     }
-
-    // Extra large devices (large desktops, 1200px and up)
-    @media (min-width: 1200px) {
-
-      &.pillar-xl-#{$i} {
-        width: calc(100%* $i / $columnCount - ($columnCount - $i)*($columnPadding / $columnCount));
-      }
-
-      &.pillar-xl-offset-#{$i} {
-        margin-left: calc(100%* $i / $columnCount - ($columnCount - $i)*($columnPadding / $columnCount));
-      }
-    }
-
-
   }
-
-
-
 }
